[BUGFIX] fix image scale on ie11, (Podio bug_47) (#59)

--- a/dev/styles/main/general.less
+++ b/dev/styles/main/general.less
@@ -87,6 +87,10 @@
     max-width: 100%;
 }
 
+.ie11 .ce-gallery img{
+    max-width: calc(~"100vw - 30px");
+}
+
 @media (max-width: 767px) {
     .ce-right.ce-nowrap .ce-gallery {
         float: none;
